--- a/rpmbuild/SOURCES/hellorpm-0.0.1-1.x86_64/Makefile-0.0.3
+++ b/rpmbuild/SOURCES/hellorpm-0.0.1-1.x86_64/Makefile-0.0.3
@@ -1,18 +1,17 @@
 cc=gcc
 prom=test-main
-deps=$(shell find ./ -name "*.h")
-src=$(shell find ./ -name "*.c")
-obj=$(src:%.c=%.o)
-
-# 其中，shell函数主要用于执行shell命令，具体到这里就是找出当前目录下所有的.c和.h文件。而$(src:%.c=%.o)则是一个字符替换函数，
-# 它会将src所有的.c字串替换成.o，实际上就等于列出了所有.c文件要编译的结果。有了这两个设定，无论我们今后在该工程加入多少.c和.h文件，
-# Makefile都能自动将其纳入到工程中来。
+deps=max.h swap.h
+obj=test-main.o max.o swap.o
 
 $(prom):$(obj)
 	$(cc) -o $(prom) $(obj)
 
 %.o: %.c $(deps)
 	$(cc) -c $< -o $@
+
+# 在这里，我们用到了几个特殊的宏。首先是%.o:%.c，这是一个模式规则，表示所有的.o目标都依赖于与它同名的.c文件（当然还有deps中列出的头文件）。
+# 再来就是命令部分的$<和$@，其中$<代表的是依赖关系表中的第一项（如果我们想引用的是整个关系表，那么就应该使用$^），具体到我们这里就是%.c。
+# 而$@代表的是当前语句的目标，即%.o
 
 clean:
 	rm -rf $(obj) $(prom)
