新增Makefile的用法

--- a/rpmbuild/SOURCES/hellorpm-0.0.1-1.x86_64/Makefile-v0.0.3
+++ b/rpmbuild/SOURCES/hellorpm-0.0.1-1.x86_64/Makefile-v0.0.3
@@ -2,18 +2,17 @@ objects=test-main.o max.o swap.o
 test-main:$(objects)
 	gcc -o test-main $(objects)
 
-$(objects):
+# 让make自动推导
+# 只要make看到一个[.o]文件，它就会自动的把[.c]文件加在依赖关系中，如果make找到一个whatever.o，那么whatever.c，
+# 就会是whatever.o的依赖文件。并且 cc -c whatever.c 也会被推导出来，于是，我们的makefile再也不用写得这么复杂。
 
-.PHONY:alltest
-alltest:test1
-test1:
-	echo $@ $(subst 1,, $@)
+test-main.o:
+max.o:
+swap.o:
 
 .PHONY:clean
 clean:
-	-rm -rf test-main $(objects) *.gch
-
-# -rm 作用报错也继续执行
+	rm -rf test-main $(objects)
 
 install:
 	mkdir -p ${HOME}/bin
@@ -30,20 +29,3 @@ uninstall:
 	rm -f ${HOME}/bin/test-main
 	#rm -f /usr/bin/test-main
 	rm -f /tmp/chaofeirpm.log
-
-.PHONY:test
-test:
-	objects=*.o
-	echo $(objects)
-	#objects=$(wildcard *o)
-	#echo $(objects)
-  vpath="%.h ./"
-	#echo $(vpath)
-
-.PHONY: cleanall cleanobj cleandiff
-cleanall: cleanobj cleandiff
-	rm -f test-main
-cleanobj:
-	rm -f *.o
-cleandiff:
-	rm -f *.diff
